--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 
+.body {
+  font-family: 'Lato','Raleway';
+}
+
 .clearfix::after {
   content: "";
   display: block;
@@ -25,6 +29,7 @@
   height: 46px;
   background-color: #fff;
   padding: 15px 0;
+  position: fixed;
 }
 
 .contact {
@@ -33,6 +38,7 @@
   font-size: 12px;
   margin-left: 1000px;
   padding: 14px 12px;
+  text-decoration: none;
   transition: color 0.3s;
 }
 
@@ -63,18 +69,25 @@
   padding-top: 50px;
 }
 
+.what-image {
+  margin-left: 160px;
+  vertical-align: bottom;
+}
+
 .what-we-can-do {
-  margin-left: 150px;
+  margin-left: 100px;
   vertical-align: top;
 }
 
 .what-title {
   color: #fff;
   font-size: 24px;
+  margin-top: 20px;
 }
 
 .what-text {
   color: #fff;
+  line-height: 25px;
   font-size: 20px;
   margin-top: 35px;
 }
@@ -127,6 +140,7 @@
   font-size: 12px;
   margin-left: 90px;
   padding: 14px 20px;
+  text-decoration: none;
   transition: color 0.3s;
   vertical-align: top;
 }
@@ -173,7 +187,7 @@
   color: #74cfae;
   height: 120px;
   line-height: 120px;
-  transition: background-color 3s;
+  transition: background-color 0.3s;
   width: 185px;
 }
 
