文章の改行とul,liタグについての質問のため

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 
+@media screen and (min-width: 1200px) {
+
 body {
   font-family: 'Raleway';
   margin: 0 auto;
@@ -10,6 +12,14 @@ main {
 
 .Lato {
   font-family: 'Lato';
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  display: inline;
 }
 
 .clearfix::after {
@@ -65,7 +75,6 @@ main {
 
 .theme {
   padding: 250px 0;
-  width: 100%;
 }
 
 .theme-title {
@@ -88,11 +97,13 @@ main {
 }
 
 .what-image {
+  display: inline-block;
   margin-left: 90px;
   vertical-align: bottom;
 }
 
 .what-we-can-do {
+  display: inline-block;
   margin-left: 130px;
   vertical-align: top;
 }
@@ -108,6 +119,7 @@ main {
   line-height: 25px;
   font-size: 20px;
   margin-top: 35px;
+  width: 660px;
 }
 
 .article-our {
@@ -128,15 +140,10 @@ main {
 }
 
 .image-unit {
+  display: inline-block;
   margin-left: 100px;
   opacity: 0.7;
   transition: opacity 0.3s;
-}
-
-.our-text {
-  color: #333;
-  font-size: 19px;
-  line-height: 23px;
 }
 
 .image-unit:hover {
@@ -155,9 +162,18 @@ main {
   margin-top: 90px;
 }
 
+.our-text {
+  color: #333;
+  display: inline-block;
+  font-size: 19px;
+  line-height: 23px;
+  width: 550px;
+}
+
 .our-email {
   background-color: #74cfae;
   color: #fff;
+  display: inline-block;
   font-size: 12px;
   margin-left: 90px;
   padding: 14px 20px;
@@ -186,6 +202,7 @@ main {
 }
 
 .circle-image {
+  display: inline-block;
   margin-left: 180px;
 }
 
@@ -227,4 +244,237 @@ main {
 .footer-text {
   color: #fff;
   margin-left: 800px;
+}
+
+}
+
+@media screen and (max-width: 1199px) {
+
+  body {
+    font-family: 'Raleway';
+    margin: 0 auto;
+  }
+  
+  main {
+    padding-top: 76px;
+  }
+  
+  .Lato {
+    font-family: 'Lato';
+  }
+  
+  .clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+  
+  .inline-block {
+    display: inline-block;
+  }
+  
+  .scale3 {
+    transform: scale(3)
+  }
+  
+  .inner {
+    margin: 0 auto;
+    text-align: center;
+    width: 97%;
+  }
+  
+  .header {
+    background-color: #fff;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+  }
+  
+  .header-inner {
+    height: 46px;
+    padding: 15px 0;
+  }
+  
+  .contact {
+    background-color: #74cfae;
+    color: #fff;
+    font-size: 12px;
+    margin-left: 1000px;
+    padding: 14px 12px;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .contact:hover {
+    color: #333;
+  }
+  
+  .title {
+    background-color: #f2f2f2;
+    width: 100%;
+  }
+  
+  .theme {
+    padding: 250px 0;
+    width: 100%;
+  }
+  
+  .theme-title {
+    color: #74cfae;
+    font-size: 90px;
+    font-weight: 700;
+    text-align: center;
+  }
+  
+  .theme-text {
+    color: #c0c0c0;
+    font-size: 30px;
+    margin-top: 20px;
+  }
+  
+  .section-what {
+    background-color: #74cfae;
+    padding: 50px 0 25px;
+    width: 100%;
+  }
+  /*
+  .what-image {
+  }*/
+  
+  .what-we-can-do {
+    margin-top: 20px;
+  }
+  
+  .what-title {
+    color: #fff;
+    font-size: 24px;
+    margin-top: 20px;
+  }
+  
+  .what-text {
+    color: #fff;
+    line-height: 25px;
+    font-size: 20px;
+    margin-top: 35px;
+  }
+  
+  .article-our {
+    padding: 60px 0 70px 0;
+    width: 100%;
+  }
+  
+  .our-title {
+    color: #333;
+    font-size: 24px;
+  }
+  
+  .our-image {
+    letter-spacing: -.4em;
+    width: 97%;
+    margin: 40px auto 0 auto;
+    z-index: 1;
+  }
+  
+  .image-unit {
+    display: block;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+
+  .vertical-align-middle {
+    vertical-align: middle;
+  }
+  
+  .image-unit:hover {
+    opacity: 1;
+  }
+  
+  .image-unit:nth-child(4) {
+    margin-top: 80px;
+  }
+  
+  .our-unit {
+    margin-top: 80px;
+  }
+
+  .our-text {
+    color: #333;
+    font-size: 19px;
+    line-height: 23px;
+  }
+  
+  .our-email {
+    background-color: #74cfae;
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 40px;
+    padding: 14px 20px;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .our-email:hover {
+    color: #333;
+  }
+  
+  .section-skill {
+    background-color: #4e4e4e;
+    padding: 70px 0 100px 0;
+  }
+  
+  .skill-title {
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  .skill-image {
+    margin-top: 70px;
+    text-align: center;
+  }
+  
+  .circle-image {
+    margin-top: 88px;
+  }
+  
+  .circle-image:first-child {
+    margin-left: 0;
+  }
+  
+  .skill-text {
+    color: #fff;
+    font-size: 16px;
+    margin-top: 15px;
+  }
+  
+  .nav-sns {
+    padding: 200px 0;
+  }
+  
+  .sns-unit {
+    color: #74cfae;
+    height: 120px;
+    line-height: 120px;
+    transition: background-color 0.3s;
+    width: 185px;
+  }
+  
+  .sns-unit:hover {
+    background-color: #fff;
+  }
+  
+  .footer {
+    background-color: #74cfae;
+    width: 100%;
+  }
+  
+  .footer-inner {
+    padding: 20px 0 25px 0;
+  }
+  
+  .footer-text {
+    color: #fff;
+    margin-left: 800px;
+  }
+
 }
