--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ li {
   transition: color 0.3s;
 }
 
+.fa-bars {
+  display: none;
+}
+
 .contact:hover {
   color: #333;
 }
@@ -119,7 +123,7 @@ li {
   line-height: 25px;
   font-size: 20px;
   margin-top: 35px;
-  width: 660px;
+  width: 650px;
 }
 
 .article-our {
@@ -221,11 +225,15 @@ li {
 }
 
 .sns-unit {
-  color: #74cfae;
+  display: inline-block;
   height: 120px;
   line-height: 120px;
   transition: background-color 0.3s;
   width: 185px;
+}
+
+.sns-color {
+  color: #74cfae;
 }
 
 .sns-unit:hover {
@@ -294,15 +302,19 @@ li {
     height: 46px;
     padding: 15px 0;
   }
-  
+
   .contact {
     background-color: #74cfae;
     color: #fff;
     font-size: 12px;
-    margin-left: 1000px;
+    margin-left: 86%;
     padding: 14px 12px;
     text-decoration: none;
     transition: color 0.3s;
+  }
+
+  .fa-bars {
+    display: none;
   }
   
   .contact:hover {
@@ -337,9 +349,6 @@ li {
     padding: 50px 0 25px;
     width: 100%;
   }
-  /*
-  .what-image {
-  }*/
   
   .what-we-can-do {
     margin-top: 20px;
@@ -355,7 +364,7 @@ li {
     color: #fff;
     line-height: 25px;
     font-size: 20px;
-    margin-top: 35px;
+    margin: 35px auto 0 auto;
   }
   
   .article-our {
@@ -401,6 +410,7 @@ li {
     color: #333;
     font-size: 19px;
     line-height: 23px;
+    margin: 0 auto;
   }
   
   .our-email {
@@ -452,11 +462,15 @@ li {
   }
   
   .sns-unit {
-    color: #74cfae;
+    display: inline-block;
     height: 120px;
     line-height: 120px;
     transition: background-color 0.3s;
     width: 185px;
+  }
+
+  .sns-color {
+    color: #74cfae;
   }
   
   .sns-unit:hover {
@@ -474,7 +488,247 @@ li {
   
   .footer-text {
     color: #fff;
-    margin-left: 800px;
+    margin-left: 70%;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+
+  body {
+    font-family: 'Raleway';
+    margin: 0 auto;
+  }
+  
+  main {
+    padding-top: 76px;
+  }
+  
+  .Lato {
+    font-family: 'Lato';
+  }
+  
+  .clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+  
+  .inline-block {
+    display: inline-block;
+  }
+  
+  .scale3 {
+    transform: scale(3)
+  }
+  
+  .inner {
+    margin: 0 auto;
+    text-align: center;
+    width: 97%;
+  }
+  
+  .header {
+    background-color: #fff;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+  }
+  
+  .header-inner {
+    height: 46px;
+    padding: 15px 0;
+  }
+  
+  .contact {
+    display: none;
+  }
+
+  .fa-bars {
+    border : 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    margin-left: 70%;
+    opacity: 0.3;
+    transform: scale(1.3, 1);
+  }
+  
+  .contact:hover {
+    color: #333;
+  }
+  
+  .title {
+    background-color: #f2f2f2;
+    width: 100%;
+  }
+  
+  .theme {
+    padding: 80px 0 130px;
+    width: 100%;
+  }
+  
+  .theme-title {
+    color: #74cfae;
+    font-size: 80px;
+    margin: 0 auto;
+    text-align: center;
+    width: 300px;
+  }
+  
+  .theme-text {
+    color: #c0c0c0;
+    font-size: 30px;
+    margin: 20px auto 0;
+    text-align: center;
+    width: 300px;
+  }
+  
+  .section-what {
+    background-color: #74cfae;
+    padding: 50px 0 25px;
+    width: 100%;
+  }
+  
+  .what-we-can-do {
+    margin-top: 20px;
+  }
+  
+  .what-title {
+    color: #fff;
+    font-size: 24px;
+    margin-top: 20px;
+  }
+  
+  .what-text {
+    color: #fff;
+    line-height: 25px;
+    font-size: 20px;
+    margin: 35px auto 0 auto;
+    width: 299px;
+  }
+  
+  .article-our {
+    padding: 60px 0 70px 0;
+    width: 100%;
+  }
+  
+  .our-title {
+    color: #333;
+    font-size: 24px;
+  }
+  
+  .our-image {
+    letter-spacing: -.4em;
+    width: 97%;
+    margin: 40px auto 0 auto;
+    z-index: 1;
+  }
+  
+  .image-unit {
+    display: block;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+
+  .vertical-align-middle {
+    vertical-align: middle;
+  }
+  
+  .image-unit:hover {
+    opacity: 1;
+  }
+  
+  .image-unit:nth-child(4) {
+    margin-top: 80px;
+  }
+  
+  .our-unit {
+    margin-top: 80px;
+  }
+
+  .our-text {
+    color: #333;
+    font-size: 19px;
+    line-height: 23px;
+    margin: 0 auto;
+    width: 330px;
+  }
+  
+  .our-email {
+    background-color: #74cfae;
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 40px;
+    padding: 14px 20px;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .our-email:hover {
+    color: #333;
+  }
+  
+  .section-skill {
+    background-color: #4e4e4e;
+    padding: 70px 0 100px 0;
+  }
+  
+  .skill-title {
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  .skill-image {
+    margin-top: 70px;
+    text-align: center;
+  }
+  
+  .circle-image {
+    margin-top: 88px;
+  }
+  
+  .circle-image:first-child {
+    margin-left: 0;
+  }
+  
+  .skill-text {
+    color: #fff;
+    font-size: 16px;
+    margin-top: 15px;
+  }
+  
+  .nav-sns {
+    padding: 50px 0;
+  }
+  
+  .sns-unit {
+    height: 120px;
+    line-height: 120px;
+    transition: background-color 0.3s;
+    width: 100%;
+  }
+
+  .sns-color {
+    color: #74cfae;
+  }
+  
+  .sns-unit:hover {
+    background-color: #fff;
+  }
+  
+  .footer {
+    background-color: #74cfae;
+    width: 100%;
+  }
+  
+  .footer-inner {
+    padding: 20px 0 25px 0;
+  }
+  
+  .footer-text {
+    color: #fff;
+    margin-left: 30%;
   }
 
 }
