--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 main {
-  padding-top: 76px;
+  padding-top: 80px;
 }
 
 .raleway {
@@ -40,7 +40,7 @@ ul {
 }
 
 .header-inner {
-  height: 46px;
+  height: 50px;
   padding: 15px 0;
 }
 
@@ -52,12 +52,14 @@ ul {
 .contact {
   background-color: #74cfae;
   color: #fff;
-  display: block;
   float: right;
   font-size: 12px;
+  margin-top: 5px;
   padding: 14px 12px;
+  text-align: center;
   text-decoration: none;
   transition: color 0.3s;
+  vertical-align: middle;
 }
 
 .contact:hover {
